chore : [FE] 폴더명, 파일명, 클래스명 정리

--- a/css/common/sidebar/sidebar-myPage.css
+++ b/css/common/sidebar/sidebar-myPage.css
@@ -35,7 +35,7 @@
 }
 .white-bg {
   position: fixed;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   top: 30%;
