--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -116,7 +116,7 @@
 }
 
 /* 3. 금일 방문 일정 */
-.ReservationMange-go {
+.Reservation-mange-go {
   font-size: 14px;
   color: #858585;
   position: relative;
