--- a/css/mypage/Wish_List.css
+++ b/css/mypage/Wish_List.css
@@ -797,3 +797,8 @@ button.swiper-pagination-bullet {
 /* slide  끝*/
 
 /*  */
+.hd__inner1400 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
