--- a/css/mypage/payment-detail.css
+++ b/css/mypage/payment-detail.css
@@ -4,7 +4,7 @@
   justify-content: flex-start;
 }
 .side-bar-flex {
-  width: 220px;
+  width: 180px;
 }
 .body-header h3 {
   font-size: 24px;
@@ -17,10 +17,14 @@
 
   font-weight: bold;
   padding-bottom: 10px;
-  border-bottom: 3px solid black;
+  /* border-bottom: 3px solid black; */
+}
+.brand-filter h3:nth-of-type(1) {
+  display: flex;
 }
 .brand-filter h3 {
   margin: 0px 10px;
+  display: none;
 }
 .brand-filter h3:hover {
   margin: 0px 10px;
@@ -28,13 +32,107 @@
   border-bottom: 3px solid pink;
   cursor: pointer;
 }
+.tabs {
+  height: 40px;
+  border-bottom: 3px solid black;
+}
 .calandar {
   width: 550px;
   height: 500px;
   padding: 20px;
 }
-.calandars div:nth-of-type(1) {
+.calandars .calandars-payment-list {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
+.calandar-Content {
+  border: 1px solid #858585;
+  border-radius: 10px;
+  padding: 0px 20px 0px 20px;
+  width: 380px;
+  margin-top: 40px;
+
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  position: relative;
+}
+.calandar-Content .calandar-top {
+  padding: 10px;
+  border-bottom: 1px solid black;
+
+  font-size: 20px;
+  font-weight: bold;
+}
+.calandar-middle {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.calendar-option-list {
+  display: flex;
+  flex-direction: row;
+  background-color: #eeeeee;
+}
+.calandar-middle .calandar-option {
+  padding: 10px;
+}
+.calendar-bottom {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+
+  width: 320px;
+}
+.calendar-bottom .calendar-bottom span {
+  font-weight: bold;
+}
+.calendar-total-price {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* 옵션 상세 내용 */
+
+.option-tabs {
+  margin-top: 10px;
+
+  background-color: rgb(250, 250, 250);
+
+  border-top: 2px solid #555;
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  top: 0;
+  width: 100%;
+}
+.option-tab {
+  display: inline-block;
+
+  padding: 15px 20px 14px;
+  width: 24.5%;
+
+  border-right: 1px solid #ccc;
+  background-color: #fafafa;
+
+  text-align: center;
+  color: #555;
+
+  font-weight: bold;
+  font-size: 16px;
+  box-sizing: border-box;
+
+  cursor: pointer;
+}
+.option-tab:nth-last-child(1) {
+  border-right: none;
+}
+/* option-tab 정보 */
+.option-information {
+  padding: 10px;
+
+  font-weight: bold;
 }
