chore : [FE] reset folder camelcase

--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -26,7 +26,7 @@
             </li>
             <br />
             <li class="item">
-              <a href="../../html/mypage/like-list.html">My-Like</a>
+              <a href="../../html/mypage/likeList.html">My-Like</a>
             </li>
 
             <li class="item">
@@ -57,10 +57,10 @@
             </div>
 
             <li class="item">
-              <a href="../../html/mypage/couple-page.html">커플 페이지 </a>
+              <a href="../../html/mypage/couplePage.html">커플 페이지 </a>
             </li>
             <li class="item">
-              <a href="../../html/mypage/estimate-storage.html">견적함</a>
+              <a href="../../html/mypage/estimateStorage.html">견적함</a>
             </li>
           </ul>
         </li>
