--- a/css/login/passwordJoin.css
+++ b/css/login/passwordJoin.css
@@ -39,27 +39,31 @@ hr{
 }
 
 /* 눈 */
-.Passwordset .pass{
+input[type="password"]::-ms-reveal {
+    display: none;
+  }
+  
+
+.password-set .pass{
     position: relative;
     
 }
 
 
-.Passwordset .pass #passSet1{
+.password-set .pass #pass-set1{
    
    width: 440px;
    height: 40px;
    border-radius:4px;
 }
 
-.Passwordset .pass #passSet2{
-   
+.password-set .pass #pass-set2{
     width: 440px;
     height: 40px;
     border-radius:4px;
  }
 
-.Passwordset .pass .btn{
+.password-set .pass .material-symbols-outlined{
     position: absolute;
     width: 20px;
     height: 17px;
@@ -72,14 +76,14 @@ hr{
 }
 
 /*  체크 표시 */
-.check input[type="checkbox"]
+.check input[type="check-box"]
 {
     display: none;
   
 }
 
 
-.check input[type="checkbox"] + label{
+.check input[type="check-box"] + label{
     display: inline-block;
     position: relative;
     padding-left:30px;
@@ -88,7 +92,7 @@ hr{
   
 }
 
-.check input[type="checkbox"] + label::before{
+.check input[type="check-box"] + label::before{
     display: inline-block;
     content:'';
     font-size: 20px;
@@ -103,7 +107,7 @@ hr{
 
 }
 
-.check input[type="checkbox"]:checked + label::before{
+.check input[type="check-box"]:checked + label::before{
     content:'✔';
     background-color: white;
     color:#C4C4C4;
