--- a/css/login/joinPaly.css
+++ b/css/login/joinPaly.css
@@ -95,7 +95,7 @@ hr{
     
 }
 
-.modal .modal_body .checkPoint{
+.modal .modal_body .check-point{
     
     width: 300px;
     height: 50px;
@@ -109,7 +109,7 @@ hr{
 
 }
 
-.modal .modal_body .checkTime{
+.modal .modal_body .check-time{
     
     width: 300px;
     height: 50px;
