--- a/css/login/login.css
+++ b/css/login/login.css
@@ -1,15 +1,5 @@
 @charset "utf-8";
-
-
-
-#Mylogo{
-    
-    width :160px;
-    height: 100px;
-    margin-bottom: 50% ;
-}
-
-.Wedder{
+.wedder{
     position: relative;
     text-decoration-line: none;
     color :inherit;
@@ -17,6 +7,7 @@
     left:40%;
     cursor: pointer; 
 }
+
 
 
 /* 모양맞추기 */
@@ -30,8 +21,7 @@
     left: 50%;
     transform: translate(-50%, -45%);
 }
-
-.Log{
+.log{
     
     
     box-shadow: 5px 5px 7px #c8c8c8c8;
@@ -53,17 +43,17 @@ input[type=button]{
     cursor: pointer;
 }
 
-#Enter{
+#ebter{
     font-size: 15px;
     margin: 0PX;
 }
 
-#Welcome{
+#welcome{
     color: #64748B;
 }
 
 /*ID 박스*/
-.Loging #EmailID{
+.login input{
     width:430px;
     height: 30px;
     border-radius:4px;
@@ -71,7 +61,7 @@ input[type=button]{
 
 
 /* 비밀번호을 잊어버렸습니까? 버튼 */
-#forgot{
+#for-got{
     text-align: center;
     background-color: white;
     border: none;
@@ -82,25 +72,21 @@ input[type=button]{
 }
 
 
-.Passwordset #password :hover #forgotin{
+.password-set #password :hover #forgotin{
     display: block;
+    
 }
 
-
+/* 
 
 .modal{
     position:absolute;
     display:none;
-    
     justify-content: center;
     top:0;
     left:0;
-
     width:100%;
     height:100%;
-
-    
-
     background-color: rgba(0,0,0,0.4);
 }
 .modal .modal_body{
@@ -127,11 +113,9 @@ input[type=button]{
     border: 1px solid #CA1A5A;
     outline: none;
     line-height: 20px;
-    
 }
 
-.modal .modal_body .checkPoint{
-    
+.modal .modal_body .check-point{
     width: 300px;
     height: 50px;
     background-color: #CA1A5A;
@@ -144,7 +128,7 @@ input[type=button]{
 
 }
 
-.modal .modal_body .checkTime{
+.modal .modal_body .check-time{
     
     width: 300px;
     height: 50px;
@@ -155,25 +139,36 @@ input[type=button]{
     border-radius: 4px;
     color: #AFAFAF;
     border: none;
-}
+} */
 
 
 /* 패스워드 눈 설정*/
-.Loging .passwordSet{
+input[type="password"]::-ms-reveal {
+    display: none;
+}
+  
+
+.login .password-set {
     position: relative;
+   
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+.login .password-set #Password{  
+    width: 430px;
+    height: 30px;
+    border-radius:4px;
     
 }
 
-
-.Loging .passwordSet #Password{
-   
-   width: 430px;
-   height: 30px;
-   border-radius:4px;
-}
-
-
-.Loging .passwordSet .btn{
+.login .password-set .material-symbols-outlined{
     position: absolute;
     width: 20px;
     height: 17px;
@@ -187,10 +182,9 @@ input[type=button]{
 
 
 /* 클릭 색 지정 */
-.Loging input:focus{
+.login input:focus{
     border-color: #CA1A5A;
     outline: none;
-   
 }
 
 /* 로그인 오류 설정 */
@@ -209,14 +203,15 @@ input[type=button]{
     border-radius:4px;
 }
 
-#LoginButton{
+#login-button{
     position: absolute;
     color : #CA1A5A;
     vertical-align: middle;
     cursor: pointer;
+    right:50px;
 }
 
-.ChangeButton button{
+.changebutton button{
    background-color : white;
    border: #D0D5DD;
    color : #191D23;
@@ -226,9 +221,8 @@ input[type=button]{
 }
 
 
-.MainLonin{
+.main-long-in{
    font-size: 14px;
-   
 }
 
 /*  체크 표시 */
@@ -241,9 +235,6 @@ input[type=button]{
     display: inline-block;
     position: relative;
     padding-left:30px;
-    
-    
-  
 }
 
 .check input[type="checkbox"] + label::before{
@@ -268,15 +259,6 @@ input[type=button]{
     color:white;
 }
 
-.Singup{
-    text-align: center;
-    left: 50px;
-    margin-right: 70px; 
-}
-.Singup #LoginButton{
-    text-decoration-line: none;
-    margin-left: 10px;
-}
 
 /*sign*/
 .sign{
@@ -310,25 +292,40 @@ input[type=button]{
     font-size: 0px;
     line-height: 0px;
     margin: 0px 25px;
-   
 }
 
-.ChangeButton{
+/* 회원가입 */
+.sing-up{
+    text-align: center;
+    left: 10px;
+    margin-right: 150px; 
+}
+.sing-up #login-button{
+    text-decoration-line: none;
+    margin-right: 60px;  
+}
+
+.change-button{
     text-align: center;
     vertical-align: middle;
 }
 
-.ChangeButton .chg .Clogo{
+.change-button .chg .clogo{
     margin: 1px;
     vertical-align: middle;
 }
 
 /* 법 */
+.law{
+    width: 530px;
+}
+
 .law button{
-    font-size: 10px;
+    font-size: 9px;
     text-align: center;
-    transform: translate(-5%, 300%);
+    transform: translate(-5%, 500%);
     background-color: white;
     border: none;  
     cursor: pointer;
+    margin-left: 35px;
 }
