--- a/css/login/passfind.css
+++ b/css/login/passfind.css
@@ -4,15 +4,12 @@
 html{
     overflow:hidden;
 }
-
-
 .modal{
     position:absolute;
     
     justify-content: center;
     top:0;
-    left:0;
-
+    left:25px;
     width:100%;
     height:100%;
 
@@ -52,7 +49,7 @@ html{
     
 }
 
-.modal .modal_body .checkPoint{
+.modal .modal_body .check-point{
     
     width: 300px;
     height: 50px;
@@ -66,7 +63,7 @@ html{
 
 }
 
-.modal .modal_body .checkTime{
+.modal .modal_body .check-time{
     
     width: 300px;
     height: 50px;
