feat : [FE] 예약리스트 생성

--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -22,15 +22,23 @@
             </li>
 
             <li class="item" id="myPage_Reservation">
-              <a href="../../html/mypage/mypage.html">예약 현황</a>
+              <a href="../../html/mypage/reservationDetail.html"
+                >상세 예약 현황</a
+              >
             </li>
             <br />
             <li class="item">
               <a href="../../html/mypage/likeList.html">My-Like</a>
             </li>
+            <li class="item">
+              <a href="../../html/mypage/wishList.html">wish-list</a>
+            </li>
 
             <li class="item">
               <a href="../../html/mypage/myPayment.html">결제 내역</a>
+            </li>
+            <li class="item">
+              <a href="../../html/mypage/myRefund.html">환불 내역</a>
             </li>
             <li class="item">
               <a href="#" class="open-modal">나의 연인 추가</a>
