--- a/css/estimate/estimate-calculator.css
+++ b/css/estimate/estimate-calculator.css
@@ -1,50 +1,51 @@
-.banner {
-    background-image: url(../../assets/images/estimateBanner.png);
-    height: 170px;
-    padding: 53px 45px;
-    text-align: left;
-    font-size: 15px;
+.container-title {
+    font-size: 30px;
+    color: #CA1A5A;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
-.banner .bold {
-    font-size: 22px;
-    font-weight: bold;
-    color: #000;
-    padding-bottom: 15px;
+.container-title .description {
+    font-size: 15px;
 }
 .outer-par {
     padding: 10px;
     text-align: left;
     color: #000;
 }
-.tabs {
-    display: flex;  
-    justify-content:center;
-    margin: 10px 0;
-    padding: 10px 180px; 
-    border-top: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
-    justify-content: space-between;
-}
 .tab {
-    padding: 10px 20px;
-    margin : 0px 30px;
-    font-weight: bold   ;
-    cursor: pointer;
+    display: flex;
+    flex: 1;
+    text-align: center;
+    margin-bottom: 20px;
 }
-.tab.active {
+.tab-content {
+    padding: 10px 20px;
+    font-weight: bold;
+    cursor: pointer;
+    flex: 1;
+}
+.tab-active {
+    padding: 10px 20px;
     border-bottom: 2px solid #CA1A5A;
     font-weight: bold;
+    cursor: pointer;
+    flex: 1;
 }
-.filters {
+.filter {
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
 }
-.filters select, .filters input {
+.filter select{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    flex: 1;
+    width: 100px;
+}
+.filter input{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 .search-container {
     display: flex;
@@ -55,47 +56,98 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    flex: 1;
+    width: 260px;
 }
-.search-button {
-    background-color: #CA1A5A;
+.search-btn {
+    background-color: #000;
     color : white;
     margin-left: 10px;  
     padding: 10px;
-    border: 1px solid #CA1A5A;
+    border: 1px solid #000;
     border-radius: 5px;
-    flex: 1;
+    width: 90px;
 }
-.grid {
+.body {
     display: flex;
+    justify-content: space-between;
 }
-.item {
+.body-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 220px);
+    grid-template-rows: repeat(2, 350px);
+    grid-gap: 20px  ;
+}
+
+/* 슬라이드 <, > 버튼 */
+.similar-buttons {
     display: flex;
+    justify-content: center;
     align-items: center;
+    margin-top: 30px;
+}
+.similar-button {
+    cursor: pointer;
+    border: none;
+}
+.similar-button.left {
+    margin-right: 30px;
+}
+.similar-button.right {
+    margin-left: 30px;
+}
+.similar-button img {
+    width: 25px;
+    height: 30px;
+}
+.currentPage {
+    font-size: 25px;
+    margin: 0 10px;
+    font-weight: 300;
+}
+
+.totalPages {
+    margin: 0 10px;
+    font-size: 25px;
+    color: rgb(160, 160, 160);
+    font-weight: 300;
+}
+
+.slice {
+    margin: 0 15px;
+    font-size: 25px;
+    color: rgb(160, 160, 160);
+    font-weight: 300;
+}
+
+.noline {
+    border-bottom: none;
+}
+
+.item {
+    text-align: center;
     box-shadow: 5px 5px 5px #ccc;
     padding: 10px;
     border-radius: 5px;
-    box-sizing: border-box;
     margin-bottom: 30px;
 }
-.image {
-    margin-right: 15px;
-}
 .image img{
-    width: 100px;
-    height: 80px;
+    width: 180px;
+    height: 180px;
 }
 .details {
     display: flex;
     flex-direction: column;
+    text-align: left;
 }
 .title {
     font-size: 15PX;
     font-weight: 700;
+    margin-top: 10px;
 }
 .address {
     margin: 5px 0;
-    font-size: 12px;
+    font-size: 10px;
+    margin-bottom: 60px;
 }
 .link {
     display: flex;
@@ -104,63 +156,56 @@
     font-size: 10px;
     justify-content: right;
 }
-.selection-container {
+.select-container {
     margin-left: 30px;
     width: 450px;
 }
-.selection-list {
+.select-list {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
     height: 760px;
 }
-.sl-title {
+.select-title {
     padding-left: 10px;
     padding-bottom: 5px;
     font-size: 20px;
     font-weight: 700;
-    border-bottom: 1px solid #000   ;
+    border-bottom: 2px solid #333;
 }
-.sl-item {
+.select-item {
     display: flex;
     align-items: center;
     margin-top: 10px;
-    margin-bottom: 420px;
+    margin-bottom: 450px;
     padding: 10px;
     box-sizing: border-box;
 }
-.sl-item img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 5px;
+.price {
+    margin-bottom: 10px;
 }
-
-.total1 {
+.price-regular {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
 }
-.total2 {
+.price-discount {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
     padding-bottom: 15px;
     border-bottom: 1px solid #757575;
 }
-.total2 .color {
+.price-discount .color {
     color: #CA1A5A;
 }
-.total3 {
+.price-total {
     display: flex;
     justify-content: space-between;
     font-size: 18px;
     font-weight: 700;
     margin-top: 20px;
     margin-bottom: 20px;
-}
-.price {
-    margin-bottom: 10px;
 }
 .material-symbols-outlined {
     font-variation-settings:
@@ -172,23 +217,23 @@
 .replay {
     display: flex;
     justify-content: right;
-    margin-top: 52px;
+    margin-top: 37px;
     font-size: 13px;
 }
 .note {
     border: 1px solid #ccc;
     padding: 10px;
-    margin-top: 30px;
+    margin-top: 10px;
     border-radius: 5px;
     font-size: 10px;
     color: #777;
 }
-.buttons {
+.btn {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 50px;
 }
-.buttons .next {
+.btn .next {
     width: 270px;
     padding: 10px 20px;
     font-size: 14px;
@@ -198,7 +243,7 @@
     border-radius: 5px;
     cursor: pointer;
 } 
-.buttons .back {
+.btn .back {
     width: 270px;
     height: auto;
     font-size: 14px;
