--- a/css/estimate/estimate-final.css
+++ b/css/estimate/estimate-final.css
@@ -13,13 +13,13 @@
     color: #757575;
     font-size: 12px;
 }
-.backButtons {
+.back-content {
     display: flex;
     justify-content: space-between;
     margin-top: 7px ;
     margin-bottom: 30px;
 }
-.backButton {
+.back-btn {
     color: #ca1a5a;
     font-weight: 700;
 }
@@ -40,8 +40,7 @@
     border: 1px solid #757575;
     border-radius: 5px;
 }
-
-.noticeTitle {
+.notice-title {
     font-size: 20px;
     font-weight: bolder;
     padding-bottom: 10px;
@@ -51,15 +50,15 @@
     color: #757575;
     line-height: 25px;
 }
-.selectedContent {
+.select-content {
     border: 100px;
 }
-.selectedList { 
+.select-list { 
     padding: 30px;
     border: 1px solid #757575;
     border-radius: 5px;
 }
-.selectedList h1 {
+.select-list h1 {
     margin: 10px;
     padding-bottom: 20px;
     font-weight: 700;
@@ -93,7 +92,7 @@
     float: left;
     margin-right: 30px;
 }
-.studioDetail {
+.studio-detail {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
@@ -102,7 +101,7 @@
     padding-top: 20px;
     padding-bottom: 120px;
 }
-.detailOption {
+.detail-option {
     font-size: 20px;
     font-weight: 500;
 }
@@ -147,12 +146,12 @@
     font-size: 20px;
     font-weight: bolder;
 }
-.buttons {
+.btn {
     display: flex;
     justify-content: space-between;
     margin: 40px 0px 10px;
 }
-.buttons .add {
+.btn .add {
     width: 270px;
     padding: 10px 20px;
     font-size: 16px;
@@ -162,7 +161,7 @@
     border-radius: 5px;
     cursor: pointer;
 }   
-.buttons .back {
+.btn .back {
     width: 270px;
     height: auto;
     padding: 10px 20px;
