--- a/css/package/package-main.css
+++ b/css/package/package-main.css
@@ -21,15 +21,15 @@ body {
     font-size: 50px;
     font-weight: bold;
 }
-.par1 {
+.title-one {
     margin: 20px 0px 20px;
     color: #666;
 }
-.par2 {
+.title-two {
     margin: 20px 0px 20px;
     color: #666;
 }
-.par3 {
+.title-three {
     margin: 20px 0px 20px;
     color: #666;
 }
@@ -43,7 +43,7 @@ body {
     top: 292px;
     right: 473px;
 }
-.midpar {
+.notice {
     font-size: 30px;
     font-weight: bold;
     padding: 100px;
@@ -84,12 +84,12 @@ span.color {
     font-size: 25px;
     color: #ca1a5a;
 }
-.recommendpar {
+.recommand-detail {
     color: #666;
     font-size: 22px;
     font-weight: 600;
 }
-.recommendpar-top {
+.recommand-title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -105,14 +105,14 @@ span.color {
     justify-content: center;
     margin-right: 7px;
 }
-.steps-title {
+.step-title {
     text-align: center;
     margin-top: 30px;
     color: #000;
     font-size: 20px;
     font-weight: 700;
 }
-.steps {
+.step {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 100px;
@@ -120,12 +120,12 @@ span.color {
     margin-bottom: 100px;
     padding: 50px;
 }
-.how-to-use {
+.step-name {
     font-size: 30px;
     color: #ca1a5a;
     font-weight: 700;
 }
-.step {
+.step-content {
     display: flex;
     font-size: 22px;
     color: #6B7684;
@@ -141,7 +141,7 @@ span.color {
     margin-bottom: 10px;
     margin-right: 20px;
 }
-.step-par {
+.step-detail {
     margin-top: 20px;
 }
 .title {
@@ -158,22 +158,22 @@ span.color {
     padding-bottom: 20px;
     border-bottom: 1px solid #000;
 }
-.bestpackage {
+.package-best {
     font-size: 24px;
     color: #333;
     font-weight: bolder;
 }
-.look-aroud {
+.package-watch {
     font-size: 14px;
 }
-.look-aroud a {
+.package-watch a {
     text-decoration-line: none;
 }
 .package-list {
     display: flex;
     justify-content: space-around;
 }
-.package {
+.package-content {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -181,11 +181,11 @@ span.color {
     width: 30%;
     text-align: center;
 }
-.package img {
+.package-content img {
     width: 100%;
     margin-bottom: 10px;
 }
-.package h3 {
+.package-content h3 {
     font-size: 18px;
     color: #333;
 }
