chore : [FE] remake myPayment design modify

--- a/components/sidebar/navibar.html
+++ b/components/sidebar/navibar.html
@@ -8,9 +8,11 @@
   <body>
     <section class="search-bar" id="LikeList-section2">
       <div class="company-kind">
-        <div class="studio">스튜디오</div>
-        <div class="dress">드레스</div>
-        <div class="makeUp">메이크업</div>
+        <div class="brand">스튜디오</div>
+        <div class="brand">드레스</div>
+        <div class="brand">메이크업</div>
+        <div class="brand">패키지</div>
+        <div class="brand">웨딩홀</div>
         <div class="List-search-bar">
           <input type="search" id="List-search-box" />
           <button id="List-searh-button">Search</button>
