chore : [FE] design modify

--- a/css/mypage/paymentDetail.css
+++ b/css/mypage/paymentDetail.css
@@ -135,6 +135,13 @@ td {
 
   cursor: pointer;
 }
+.link:hover {
+  background-color: #ccc;
+}
+.link a {
+  color: rgb(50, 152, 220);
+  font-weight: normal;
+}
 
 .all-delete:hover {
   border: 1px solid #ccc;
