feat : [FE] 스튜디오, 드레스, 메이크업 업체 리스트 페이지

--- a/components/header/headerV2.html
+++ b/components/header/headerV2.html
@@ -86,13 +86,18 @@
                             >
                         </li>
                         <li class="black">
-                            <a
-                                href="../../html/weddingHall/weddingHallList.html"
+                            <a href="../../html/studio/studioList.html"
                                 >Studio</a
                             >
                         </li>
-                        <li class="black"><a href="#">Dress</a></li>
-                        <li class="black"><a href="#">Make Up</a></li>
+                        <li class="black">
+                            <a href="../../html/dress/dressList.html">Dress</a>
+                        </li>
+                        <li class="black">
+                            <a href="../../html/makeup/makeupList.html"
+                                >Make Up</a
+                            >
+                        </li>
                         <li class="black">
                             <a href="../../html/Package/packageMain.html"
                                 >Package</a
