--- a/css/studio/studioList.css
+++ b/css/studio/studioList.css
@@ -91,7 +91,6 @@
     height: 70%;
     object-fit: cover;
 }
-
 .card-info {
     display: flex;
     flex-direction: column;
@@ -107,7 +106,7 @@
     margin-bottom: 0;
 }
 
-.weddinghall-name {
+.studio-name {
     color: #ca1a5a;
     font-weight: 500;
     font-size: 15px;
@@ -118,7 +117,7 @@
     float: right;
 }
 
-.weddinghall-address {
+.studio-address {
     color: #828282;
     font-weight: 100;
 }
