--- a/css/dress/dressList.css
+++ b/css/dress/dressList.css
@@ -81,14 +81,14 @@
 }
 
 .card {
-    height: 375px;
+    height: 518px;
     width: 100%;
     overflow: inherit;
 }
 
 .card img {
     width: 100%;
-    height: 70%;
+    height: 75%;
     object-fit: cover;
 }
 
@@ -107,7 +107,7 @@
     margin-bottom: 0;
 }
 
-.weddinghall-name {
+.dress-name {
     color: #ca1a5a;
     font-weight: 500;
     font-size: 15px;
@@ -118,7 +118,7 @@
     float: right;
 }
 
-.weddinghall-address {
+.dress-address {
     color: #828282;
     font-weight: 100;
 }
