--- a/css/estimate/estimate-calculator.css
+++ b/css/estimate/estimate-calculator.css
@@ -7,30 +7,22 @@
 .container-title .description {
     font-size: 15px;
 }
-.outer-par {
-    padding: 10px;
-    text-align: left;
-    color: #000;
-}
-.tab {
+
+/* 스드메 상단 탭 */
+.tabs {
     display: flex;
     flex: 1;
     text-align: center;
     margin-bottom: 20px;
 }
-.tab-content {
+.tab {
     padding: 10px 20px;
     font-weight: bold;
     cursor: pointer;
     flex: 1;
 }
-.tab-active {
-    padding: 10px 20px;
-    border-bottom: 2px solid #CA1A5A;
-    font-weight: bold;
-    cursor: pointer;
-    flex: 1;
-}
+
+/* 필터 */
 .filter {
     display: flex;
     gap: 10px;
@@ -47,11 +39,11 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-.search-container {
+.search-box {
     display: flex;
     align-items: center;
 }
-.search-container input {
+.search-box input {
     margin-left: 10px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -67,15 +59,20 @@
     border-radius: 5px;
     width: 90px;
 }
-.body {
+
+/* 그리드 */
+.divide {
     display: flex;
     justify-content: space-between;
+}
+.body {
+    display: none;
 }
 .body-grid {
     display: grid;
     grid-template-columns: repeat(3, 220px);
     grid-template-rows: repeat(2, 350px);
-    grid-gap: 20px  ;
+    grid-gap: 20px;
 }
 
 /* 슬라이드 <, > 버튼 */
@@ -104,25 +101,23 @@
     margin: 0 10px;
     font-weight: 300;
 }
-
 .totalPages {
     margin: 0 10px;
     font-size: 25px;
     color: rgb(160, 160, 160);
     font-weight: 300;
 }
-
 .slice {
     margin: 0 15px;
     font-size: 25px;
     color: rgb(160, 160, 160);
     font-weight: 300;
 }
-
 .noline {
     border-bottom: none;
 }
 
+/* 그리드 요소 속성 */
 .item {
     text-align: center;
     box-shadow: 5px 5px 5px #ccc;
@@ -133,6 +128,7 @@
 .image img{
     width: 180px;
     height: 180px;
+    object-fit: cover;
 }
 .details {
     display: flex;
@@ -156,6 +152,8 @@
     font-size: 10px;
     justify-content: right;
 }
+
+/* 선택하신 목록 */
 .select-container {
     margin-left: 30px;
     width: 450px;
@@ -164,7 +162,7 @@
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
-    height: 760px;
+    height: 692px;
 }
 .select-title {
     padding-left: 10px;
@@ -177,7 +175,7 @@
     display: flex;
     align-items: center;
     margin-top: 10px;
-    margin-bottom: 450px;
+    margin-bottom: 389px;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -207,18 +205,18 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.replay {
+    display: flex;
+    justify-content: right;
+    margin-top: 37px;
+    font-size: 13px;
+}
 .material-symbols-outlined {
     font-variation-settings:
     'FILL' 0,
     'wght' 200,
     'GRAD' 0,
     'opsz' 14
-}
-.replay {
-    display: flex;
-    justify-content: right;
-    margin-top: 37px;
-    font-size: 13px;
 }
 .note {
     border: 1px solid #ccc;
@@ -228,6 +226,8 @@
     font-size: 10px;
     color: #777;
 }
+
+/* 이전, 다음 버튼 */   
 .btn {
     display: flex;
     justify-content: space-between;
@@ -252,4 +252,12 @@
     border: 1px solid #000;
     border-radius: 5px;
     cursor: pointer;
-}       
+}
+
+.tab-selected {
+    color: #ca1a5a;
+    border-bottom: 2px solid #ca1a5a;
+}
+.contents-active {
+    display: block;
+}
