--- a/css/package/packageMain.css
+++ b/css/package/packageMain.css
@@ -1,6 +1,9 @@
+/* 슬라이드 상단 공백 해결 */
 body {
     margin-top: 143px !important;
 }
+
+/* 슬라이드 */
 .slider-box {
     height: 75vh;
 }
@@ -13,7 +16,7 @@ body {
 .swiper > .swiper-wrapper > .swiper-slide:nth-child(even) {
     background-color: rgba(206, 26, 90, 0.15);
 }
-.paragraph {
+.banner-text {
     text-align: left;
     margin: 170px 500px;
 }
@@ -43,12 +46,6 @@ body {
     top: 292px;
     right: 473px;
 }
-.notice {
-    font-size: 30px;
-    font-weight: bold;
-    padding: 100px;
-    text-align: center;
-}
 span.color {
     color: red;
     vertical-align: text-bottom;
@@ -60,6 +57,14 @@ span.color {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+}
+
+/* 패키지 추천 */
+.notice {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 100px;
+    text-align: center;
 }
 .recommendations {
     display: grid;
@@ -77,7 +82,7 @@ span.color {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 40px;
-    height: 300px;
+    height: 340px;
     text-align: center;
 }
 .recommendation h2 {
@@ -86,7 +91,7 @@ span.color {
 }
 .recommand-detail {
     color: #666;
-    font-size: 22px;
+    font-size: 21px;
     font-weight: 600;
 }
 .recommand-title {
@@ -105,6 +110,8 @@ span.color {
     justify-content: center;
     margin-right: 7px;
 }
+
+/* 패키지 이용방법 */
 .step-title {
     text-align: center;
     margin-top: 30px;
@@ -148,10 +155,12 @@ span.color {
     font-weight: bolder;
     padding-bottom: 5px;
 }
+
+/* 베스트 패키지 */
 .packages {
     text-align: center;
 }
-.pack-title {
+.package-title {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
