--- a/css/reservation/reservationPayment.css
+++ b/css/reservation/reservationPayment.css
@@ -1,73 +1,23 @@
 /* 타이틀 */
 .title {
     text-align: left;
-    color: #CA1A5A;
+    color: #ca1a5a;
+    border-bottom: 2px solid #000;
+    padding-bottom: 5px;
 }
 
 .title-sub {
-    font-size: 14px;
+    font-size: 17px;
     font-weight: normal;
     letter-spacing: -0.5px;
     margin-bottom: 5px;
 }
 
 .title-main {
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bold;
     margin-top: 0;
-    margin-bottom: 20px;
-}
-
-/* 스텝 Bar */
-.steps-bar {
-    font-size: 13px;
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
-    align-content: space-between;
-    width: 100%;
-    /* margin: 50px auto; */
-}
-
-.step {
-    color: #737373;
-    position: relative;
-    flex: 1;
-    padding: 13px 20px;
-    text-align: center;
-    background: #f3f3f3;
-}
-
-.step::after {
-    content: "";
-    position: absolute;
-    right: -20px;
-    top: 50%;
-    transform: translateY(-50%);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid #f3f3f3;
-    z-index: 1;
-}
-
-.step:not(:last-child)::before {
-    content: "";
-    position: absolute;
-    right: -20px;
-    top: 50%;
-    transform: translateY(-50%);
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    z-index: 2;
-}
-
-.step.active::after {
-    border-left-color: #000;
-}
-
-.step.active {
-    background: #000;
-    color: #fff;
+    margin-bottom: 5px;
 }
 
 
@@ -332,6 +282,40 @@ input {
 .option-price {
     display: flex;
     align-items: center;
+}
+
+.price-container {
+    margin: 20px 5px;
+}
+
+.price-regular {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 15px 0;
+    padding: 0 25px;
+    color: #757575;
+}
+
+.discount {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 15px 0;
+    padding: 0 25px;
+    color: #FF3535;
+}
+
+.price-final {
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 10px 0;
+    padding: 15px 25px;
+    border-top: 2px solid #000;
 }
 
 /* 4. 결제 */
