chore : [FE] different design in reservationList

--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -22,9 +22,7 @@
             </li>
 
             <li class="item" id="myPage_Reservation">
-              <a href="../../html/mypage/reservationDetail.html"
-                >상세 예약 현황</a
-              >
+              <a href="../../html/mypage/reservationList.html"> 예약 현황</a>
             </li>
             <br />
             <li class="item">
